--- a/compton.conf
+++ b/compton.conf
@@ -58,6 +58,7 @@ glx-copy-from-front = false;
 glx-swap-method = "undefined";
 
 opacity-rule = [ 
+  "5:name= 'i3lock'",
   "99:name *?= 'Call'", 
   "99:class_g = 'Chromium'", 
   "99:name *?= 'Conky'", 
