--- a/config
+++ b/config
@@ -129,6 +129,7 @@ bindsym $mod+y split v;exec notify-send 'tile vertically'
 bindsym $mod+x border toggle
 # Show the first scratchpad window
 bindsym $mod+z scratchpad show
+bindsym $mod+BackSpace [class="Termite"] scratchpad show
 # Lock the system
 bindsym $mod+q exec i3lock -i $i3path/i3-lock-screen.png -t -f
 # bindsym $mod+q exec --no-startup-id blurlock
@@ -295,7 +296,9 @@ mode "workspace" {
 }
 
 # hide/unhide i3status bar
-# bindsym $mod+m bar mode toggle
+#bindsym $mod+m bar mode toggle
+#
+bindsym $mod+w mode "workspace"
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+z move scratchpad
@@ -339,23 +342,26 @@ exec --no-startup-id $i3multipath/.env/bin/python $i3multipath/create_new_projec
 exec --no-startup-id dropbox start
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+# enable compton
+exec --no-startup-id compton --config ~/.i3/compton.conf
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
-exec --no-startup-id /usr/bin/fcitx-autostart
-exec --no-startup-id xrandr --output eDP1 --primary --mode 1920x1080 --pos 1920x0 --rotate normal --output HDMI1 --mode 1920x1080 --pos 0x0 --rotate normal --output VIRTUAL1 --off
+exec --no-startup-id /usr/bin/ibus-daemon -x -d
+#exec --no-startup-id /usr/bin/fcitx-autostart
+exec_always --no-startup-id if [ $(xrandr|grep HDMI1|cut -d ' ' -f 2) = 'connected' ];then xrandr --output eDP1 --primary --mode 1920x1080 --pos 1920x0 --rotate normal --output HDMI1 --mode 1920x1080 --pos 0x0 --rotate normal --output VIRTUAL1 --off;else xrandr --output eDP1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI1 --off --output VIRTUAL1 --off;fi
 # exec --no-startup-id clipit
 # exec_always --no-startup-id sbxkb
 # exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-# exec --no-startup-id xautolock -time 10 -locker blurlock
+# exec --no-startup-id xautolock -time 1 -locker blurlock
+exec --no-startup-id xautolock -time 10 -locker '/home/nayu/.i3/matrixlock.sh'
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 # exec --no-startup-id terminal
 exec --no-startup-id terminator
 exec --no-startup-id nm-applet
-exec --no-startup-id blueman-applet
-exec --no-startup-id dropbox start
+
 # exec --no-startup-id nemo
 
 popup_during_fullscreen leave_fullscreen
