--- a/config
+++ b/config
@@ -70,7 +70,9 @@ bindsym $mod+Shift+l move right
 
 
 # Set shut down, restart and locking features
-bindsym $mod+minus mode "$mode_system"
+bindsym $mod+minus exec ~/.i3/i3blocks-contrib/shutdown_menu/shutdown_menu
+
+#bindsym $mod+minus mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id i3exit lock, mode "default"
@@ -134,9 +136,9 @@ bindsym $mod+y split v;exec notify-send 'tile vertically'
 bindsym $mod+x border toggle
 # Show the first scratchpad window
 bindsym $mod+z scratchpad show
-bindsym $mod+BackSpace [class="Termite"] scratchpad show
 # Lock the system
-bindsym $mod+q exec i3lock -i $i3path/i3-lock-screen.png -t -f
+# bindsym $mod+q exec i3lock -i $i3path/i3-lock-screen.png -t -f
+bindsym $mod+q exec '/home/nayu/.i3/matrixlock.sh'
 # bindsym $mod+q exec --no-startup-id blurlock
 
 # toggle tiling / floating
@@ -363,7 +365,7 @@ exec_always --no-startup-id xrandr --output eDP1 --primary --mode 1920x1080 --po
 # exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
 # exec --no-startup-id xautolock -time 1 -locker blurlock
-exec --no-startup-id xautolock -time 10 -locker '/home/nayu/.i3/matrixlock.sh'
+# exec --no-startup-id xautolock -time 10 -locker '/home/nayu/.i3/matrixlock.sh'
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 # exec --no-startup-id terminal
