--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -28,6 +28,13 @@ separator=true
 separator_block_width=40
 markup=pango
 
+[mediaplayer]
+command=~/.i3/i3blocks-contrib/mediaplayer/mediaplayer
+instance=cmus
+interval=1
+signal=10
+color=#4ec2f7
+
 # Do make in bandwidth2 folder for this to work
 [bandwidth]
 label=⇅
@@ -63,6 +70,12 @@ command=/usr/lib/i3blocks/memory
 interval=10
 color=#8CE000
 
+[disk]
+command=~/.i3/i3blocks-contrib/disk/disk
+label=  
+interval=30
+color=#4ec2f7
+
 # Do this if this block doesn't work
 # sudo apt install acpi
 [battery]
@@ -76,3 +89,5 @@ color=#ef6191
 command=date '+周%a %x %H:%M'
 interval=5
 color=#ffb64c
+
+
