--- a/config
+++ b/config
@@ -138,7 +138,7 @@ bindsym $mod+x border toggle
 bindsym $mod+z scratchpad show
 # Lock the system
 # bindsym $mod+q exec i3lock -i $i3path/i3-lock-screen.png -t -f
-bindsym $mod+q exec '/home/nayu/.i3/matrixlock.sh'
+bindsym $mod+q exec /home/nayu/.i3/matrixlock.sh
 # bindsym $mod+q exec --no-startup-id blurlock
 
 # toggle tiling / floating
@@ -351,9 +351,9 @@ bindsym Shift+XF86MonBrightnessDown exec $i3path/utils/brightness_gui.sh
 # Autostart applications
 exec --no-startup-id dropbox start
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+exec --no-startup-id nitrogen --restore; sleep 1; compton --config ~/.i3/compton.conf -b
 # enable compton
-exec --no-startup-id compton --config ~/.i3/compton.conf
+# exec --no-startup-id compton --config ~/.i3/compton.conf
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
@@ -395,6 +395,7 @@ for_window [class="GParted"] floating enable border normal
 for_window [title="i3_help"] floating enable sticky enable border normal
 for_window [class="Lightdm-settings"] floating enable
 for_window [class="Lxappearance"] floating enable sticky enable border normal
+for_window [class="Simplenote"] floating enable sticky enable border normal
 for_window [class="Manjaro-hello"] floating enable
 for_window [class="Manjaro Settings Manager"] floating enable border normal
 for_window [title="MuseScore: Play Panel"] floating enable
