--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -27,7 +27,6 @@ align=center
 separator=true
 separator_block_width=40
 markup=pango
-color=#000000
 
 [mediaplayer]
 command=~/.i3/i3blocks-contrib/mediaplayer/mediaplayer
@@ -83,7 +82,8 @@ color=#4ec2f7
 command=/usr/lib/i3blocks/battery
 label=⚡
 interval=30
-color=#ef6191
+color=#8CE000
+# color=#ef6191
 
 [weather]
 command=curl -H "Accept-Language: zh" -Ss 'https://wttr.in/HangZhou?1&T&Q' | cut -c 16- | head -2 | xargs echo
